@@ -1,1 +1,1 @@
-0.2.4
+0.2.5
