@@ -1,0 +1,110 @@
+/**
+* @package fluxx-compensator an ownCloud app
+* @category base
+* @author Christian Reiner
+* @copyright 2012-2013 Christian Reiner <foss@christian-reiner.info>
+* @license GNU Affero General Public license (AGPL)
+* @link information http://apps.owncloud.com/content/show.php?content=157091
+*
+* This library is free software; you can redistribute it and/or
+* modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
+* License as published by the Free Software Foundation; either
+* version 3 of the license, or any later version.
+*
+* This library is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU AFFERO GENERAL PUBLIC LICENSE for more details.
+*
+* You should have received a copy of the GNU Affero General Public
+* License along with this library.
+* If not, see <http://www.gnu.org/licenses/>.
+*
+*/
+
+/**
+ * @file css/dynamic-5.css
+ * @brief Dynamic style definitions modifying the apps builtin styles, version for owncloud-5
+ * @author Christian Reiner
+ */
+
+/* default handle position rules, required by FF to animate the transitions */
+#fluxx-H {
+  top: 0;
+}
+#fluxx-N {
+  left: 0;
+}
+/* move navigation handle up, required due to the absolute positioning */
+html.fluxx-state-H-hidden #fluxx-N {
+  margin-top: 0 !important;
+}
+/* navigation hidden: move left and add a more impressive shadow as a hint */
+html.fluxx-state-N-hidden #navigation {
+	left: -64px !important;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-o-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-ms-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-khtml-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222;
+}
+/* move content to the left when navigation is hidden */
+html.fluxx-state-N-hidden #content-wrapper {
+	padding-left: 0;
+}
+html.fluxx-state-N-hidden #controls {
+	padding-right: 6px;
+}
+
+/* header hidden: move up and show more impressive shadow as a hint */
+html.fluxx-state-H-hidden #header {
+	top: -45px !important;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+	-o-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+	-ms-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+	-khtml-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .5), inset 0 -2px 10px #222 !important;
+}
+/* move stuff up to top when header is hidden */
+html.fluxx-state-H-hidden #navigation,
+html.fluxx-state-H-hidden #content-wrapper {
+	padding-top: 0;
+}
+
+/* below some specific app dependent settings to compensate for exotic in-app styles */
+
+/* no _known_ mode detected, so _guess_ */
+html.fluxx-modeless { }
+
+/* 'bookarks' app */
+html.fluxx-mode-bookmarks { }
+html.fluxx-mode-bookmarks.fluxx-state-N-hidden #firstrun { left: 280px; }
+
+/* 'calendar' app */
+html.fluxx-mode-calendar { }
+
+/* 'contacts' app */
+html.fluxx-mode-contacts { }
+html.fluxx-mode-contacts.fluxx-state-N-hidden #contactsheader { left: 280px; }
+html.fluxx-mode-contacts.fluxx-state-H-hidden #groupsheader,
+html.fluxx-mode-contacts.fluxx-state-H-hidden #contactsheader { top: 0px; }
+
+/* 'files' app */
+html.fluxx-mode-files { }
+
+/* 'gallery' app */
+html.fluxx-mode-gallery { }
+
+/* 'media' app */
+html.fluxx-mode-media { }
+html.fluxx-mode-media.fluxx-state-N-hidden #rightcontent { left: -64px; }
+html.fluxx-mode-media.fluxx-state-H-hidden #rightcontent { top: -3.5em; }
+
+
+/* 'notes' app */
+html.fluxx-mode-notes { }
+
+/* 'shorty' app */
+html.fluxx-mode-shorty { }
